fixed the number of food department

--- a/assets/ignoreit/CR.html
+++ b/assets/ignoreit/CR.html
@@ -51,7 +51,7 @@ Phone: <a class="telephone" href="tel:01816069622">01816069622</a></div>
 
 <p style="text-align: center;"><strong><u>&nbsp;8th Batch</u></strong></p>
 
-<div class="infoclass"><strong>Asis Bissas</strong><br />
+<div class="infoclass"><strong>Asim Bissas</strong><br />
 Phone: <a class="telephone" href="tel:01738901346">01738901346</a></div>
 
 <p style="text-align: center;"><u><strong>&nbsp;9th batch</strong></u></p>
@@ -95,7 +95,7 @@ Phone: <a class="telephone" href="tel:01829616858">01829616858</a></div>
 
 <p style="text-align: center;"><u><strong>5th batch</strong></u></p>
 
-<div class="infoclass"><strong>Salauddin Millat</strong><br />
+<div class="infoclass"><strong>Shalahuddin Millat</strong><br />
 Phone: <a class="telephone" href="tel:01834136774">01834136774</a></div>
 
 <p style="text-align: center;"><u><strong>6th Batch</strong></u></p>
@@ -234,24 +234,7 @@ Phone: <a class="telephone" href="tel:01713613039">01713613039</a></div>
 <div class="infoclass"><strong>Shipon</strong><br />
 Phone: <a class="telephone" href="tel:01676455064">01676455064</a></div>
 
-<div class="headertitle">Environmental Science and Hazard Studies(ESHS 08)</div>
-
-<p style="text-align: center;"><u><strong>7th batch</strong></u></p>
-
-<div class="infoclass"><strong>Sovel Ahsan</strong><br />
-Phone: <a class="telephone" href="tel:01672783818">01672783818</a></div>
-
-<p style="text-align: center;"><u><strong>8th Batch</strong></u></p>
-
-<div class="infoclass"><strong>Hasib</strong><br />
-Phone: <a class="telephone" href="tel:01926863669">01926863669</a></div>
-
-<p style="text-align: center;"><u><strong>9th Batch</strong></u></p>
-
-<div class="infoclass"><strong>Tajbir</strong><br />
-Phone: <a class="telephone" href="tel:01781939371">01781939371</a></div>
-
-<div class="headertitle">Food Technology and Nutrition Science(FTNS 09)</div>
+<div class="headertitle">Food Technology and Nutrition Science(FTNS 08)</div>
 
 <p style="text-align: center;"><u><strong>7th Batch</strong></u></p>
 
@@ -276,6 +259,23 @@ Phone: <a class="telephone" href="tel:01671651155">01671651155</a></div>
 
 <div class="infoclass">CR(Female)<br />
 <strong>Israt Jahan Jeny</strong></div>
+
+<div class="headertitle">Environmental Science and Hazard Studies(ESHS 09)</div>
+
+<p style="text-align: center;"><u><strong>7th batch</strong></u></p>
+
+<div class="infoclass"><strong>Sovel Ahsan</strong><br />
+Phone: <a class="telephone" href="tel:01672783818">01672783818</a></div>
+
+<p style="text-align: center;"><u><strong>8th Batch</strong></u></p>
+
+<div class="infoclass"><strong>Hasib</strong><br />
+Phone: <a class="telephone" href="tel:01926863669">01926863669</a></div>
+
+<p style="text-align: center;"><u><strong>9th Batch</strong></u></p>
+
+<div class="infoclass"><strong>Tajbir</strong><br />
+Phone: <a class="telephone" href="tel:01781939371">01781939371</a></div>
 
 <div class="headertitle">Business Administration(BBA 10)</div>
 
@@ -332,7 +332,9 @@ Phone: <a class="telephone" href="tel:01623092488">01623092488</a></div>
 <p style="text-align: center;"><u><strong>8th Batch</strong></u></p>
 
 <div class="infoclass"><strong>Md. Mahmudul Islam Khan(Shiblu)</strong><br />
-Phone: <a class="telephone" href="tel:01687004274">01687004274</a></div>
+Phone: <a class="telephone" href="tel:01687004274">01687004274</a><br />
+website: <a href="http://www.economicsbd.com">www.economicsbd.com</a><br />
+Fb Page: <a href="http://www.facebook.com/economicsbdmagazine">www.facebook.com/economicsbdmagazine</a></div>
 
 <div class="infoclass">CR(Female)<br />
 <strong>Tahrima Sultana</strong></div>
