--- a/assets/ignoreit/Central_library.html
+++ b/assets/ignoreit/Central_library.html
@@ -38,4 +38,22 @@ p{font-size:15px}
 <p>You can download the Academic booklist in PDF format.</p>
 
 <p><a href="http://nstu.edu.bd/images/library/Book_Catalogue_10_November_14.pdf">Download from here</a></p>
+
+<p>For any information You can contact with them:</p>
+
+<div class="infoclass">Librarian<br />
+<strong>Mr Md Jahangir Hossain</strong><br />
+Phone:<a class="telephone" href="tel:+88032171481">+880-321-71481</a>;<br />
+Mobile:<a class="telephone" href="tel:01716068982">01716068982</a><br />
+Email:<a class="email" href="mailto:nstulib9@yahoo.com">nstulib9@yahoo.com</a></div>
+
+<div class="infoclass">Section officer<br />
+<strong>Mr Mohammad Abdullah Al Mamun</strong><br />
+Mobile:<a class="telephone" href="tel:01720175283">01720175283</a><br />
+Email:<a class="email" href="mailto:nstu_library@yahoo.com">nstu_library@yahoo.com</a></div>
+
+<div class="infoclass">Documentation Officer<br />
+<strong>Md.&nbsp; Babor Ali</strong><br />
+Phone: 01722-936805<br />
+Email: baborali.ru@gmail.com</div>
 </div>
