--- a/assets/ignoreit/academic_council.html
+++ b/assets/ignoreit/academic_council.html
@@ -41,7 +41,7 @@ p{font-size:15px}
 <div class="infoclass">
 <div><strong>A. K. M. Sayedul Haque Chowdhury</strong></div>
 
-<div>Vice Chancellor</div>
+<div>Vice Chancellor (27th Sept 2010-26th Sept 2014)</div>
 
 <div>phone: <a class="telephone" href="tel:62833">62833</a> , <a class="telephone" href="tel:62655">62655</a>, <a class="telephone" href="tel:62655">62733</a></div>
 
