--- a/assets/ignoreit/halloffice.html
+++ b/assets/ignoreit/halloffice.html
@@ -63,15 +63,21 @@ Email: <a class="email" href="mailto:ruhulmicro13@yahoo.com">ruhulmicro13@yahoo.
 <div class="headertitle">BKH Hall</div>
 </div>
 
-<div class="infoclass">Provost (Acting)<br />
-<strong>Md. Rafiqul Islam</strong><br />
+<div style="text-align: center;"><u><strong>Provost (Acting)</strong></u></div>
+
+<div class="infoclass"><strong>Md. Rafiqul Islam</strong><br />
 Phone: <a class="telephone" href="tel:01717300701">01717300701</a><br />
 Email: <a class="email" href="mailto:rafiq_du228@yahoo.com">rafiq_du228@yahoo.com</a></div>
 
-<div class="infoclass">Assistant Provost<br />
-<strong>Fateh Nur robel</strong><br />
-Phone: <a class="telephone" href="tel:01819457050">01819457050</a><br />
-Email: <a class="email" href="mailto:rubel.acct@yahoo.com">rubel.acct@yahoo.com</a></div>
+<div style="text-align: center;"><u><strong>Assistant Provost</strong></u></div>
+
+<div class="infoclass"><strong>Khandokar Fahmida Sultana</strong><br />
+Phone: <a class="telephone" href="tel:01676172577">01676172577</a><br />
+Email: <a class="email" href="mailto:fahmida.foni@gmail.com">fahmida.foni@gmail.com</a></div>
+
+<div class="infoclass"><strong>Binata Rani Sen</strong><br />
+Phone: <a class="telephone" href="tel:01676206194">01676206194</a><br />
+Email: <a class="email" href="mailto:ranibinata@gmail.com">ranibinata@gmail.com</a></div>
 
 <div class="infoclass"><strong>Fatematuz Juhora Evamoni</strong><br />
 Phone: <a class="telephone" href="tel:01710066124">01710066124</a><br />
@@ -91,22 +97,28 @@ Phone: <a class="telephone" href="tel:71487">71487</a><br />
 Mobile: <a class="telephone" href="tel:01733066950">01733066950</a>, <a class="telephone" href="tel:01911110671">01911110671</a><br />
 Email: <a class="email" href="mailto:nmbahadur@yahoo.com">nmbahadur@yahoo.com</a></div>
 
-<div class="infoclass">Assistant Proctor<br />
-<strong>MD. ANISUZZAMAN (RIMON)</strong><br />
-Mobile: <a class="telephone" href="tel:+8801717499749">+8801717499749</a><br />
-Email: <a class="email" href="mailto:rimon49@yahoo.com">rimon49@yahoo.com</a></div>
+<div style="text-align: center;"><strong><u>Assistant Proctor</u></strong></div>
 
-<div class="infoclass"><strong>Latifa Bulbul</strong><br />
-Phone: <a class="telephone" href="tel:01741676362">01741676362</a><br />
-Email: <a class="email" href="mailto:prova_pharm32@yahoo.com">prova_pharm32@yahoo.com</a></div>
+<div class="infoclass"><strong>Mohammad Mohinuzzaman Moyeen</strong><br />
+Phone: <a class="telephone" href="tel:01819509301">01819509301</a><br />
+Email: <a class="email" href="mailto:moyeen_envsc@yahoo.com">moyeen_envsc@yahoo.com</a></div>
+
+<div class="infoclass"><strong>Mehede Hassan Rubel</strong><br />
+Phone: <a class="telephone" href="tel:+8801710586359">+8801710586359</a><br />
+Fax: <a class="telephone" href="tel:+88032162788">+88032162788</a><br />
+Email: <a class="email" href="mailto:mhrubel_188@yahoo.com">mhrubel_188@yahoo.com</a></div>
 
 <div class="infoclass"><strong>MD. ROBIUL HASAN (RONY)</strong><br />
 Mobile: <a class="telephone" href="tel:+8801718589668">+8801718589668</a><br />
 Email: <a class="email" href="mailto:rhasan_rony@yahoo.com">rhasan_rony@yahoo.com</a></div>
 
-<div class="infoclass"><strong>Mohammad Mohinuzzaman Moyeen</strong><br />
-Phone: <a class="telephone" href="tel:01819509301">01819509301</a><br />
-Email: <a class="email" href="mailto:moyeen_envsc@yahoo.com">moyeen_envsc@yahoo.com</a></div>
+<div class="infoclass"><strong>Latifa Bulbul</strong><br />
+Phone: <a class="telephone" href="tel:01741676362">01741676362</a><br />
+Email: <a class="email" href="mailto:prova_pharm32@yahoo.com">prova_pharm32@yahoo.com</a></div>
+
+<div class="infoclass"><strong>Md. Monir Hossain</strong><br />
+phone: <a class="telephone" href="tel:01670117946">01670117946</a><br />
+Email: <a class="email" href="mailto:monir.pharma@yahoo.com">monir.pharma@yahoo.com</a></div>
 
 <div>
 <div class="headertitle">Student Advice and Guidance Department</div>
