--- a/assets/ignoreit/regent.html
+++ b/assets/ignoreit/regent.html
@@ -35,7 +35,7 @@ p{font-size:15px}
 <div class="headertitle">Chairman</div>
 
 <div class="infoclass"><strong>Prof. Dr. A. K. M. Sayedul Haque Chowdhury</strong><br />
-Vice Chancellor<br />
+Vice Chancellor (27th Sept 2010-26th Sept 2014)<br />
 Telephone: <a class="telephone" href="tel:+880-321-62833">+880-321-62833</a>, <a class="telephone" href="tel:62733">62733</a>, <a class="telephone" href="tel:62655">62655</a>.<br />
 Mobile: <a class="telephone" href="tel:01730042888">01730042888</a></div>
 
