--- a/assets/ignoreit/registeroffice.html
+++ b/assets/ignoreit/registeroffice.html
@@ -35,7 +35,7 @@ p{font-size:15px}
 <div class="headertitle">Vice Chancellor Office</div>
 
 <div class="infoclass">A. K. M. Sayedul Haque Chowdhury<br />
-Vice Chancellor<br />
+Vice Chancellor (27th Sept 2010-26th Sept 2014)<br />
 phone: <a class="telephone" href="tel:+88032162833">+880-321-62833</a> ,<br />
 <a class="telephone" href="tel:+88032162655">+880-321-62655</a>,<br />
 <a class="telephone" href="tel:+88032162655">+880-321-62733</a><br />
@@ -219,6 +219,12 @@ Mr Mohammad Abdullah Al Mamun<br />
 Mobile:<a class="telephone" href="tel:01720175283">01720175283</a><br />
 Email:<a class="email" href="mailto:nstu_library@yahoo.com">nstu_library@yahoo.com</a></div>
 
+<div class="infoclass">Documentation Officer<br />
+<strong>Md.&nbsp; Babor Ali</strong><br />
+Phone: 01722-936805<br />
+Email: baborali.ru@gmail.com</div>
+</div>
+
 <div class="headertitle">Officers&#39; Association</div>
 
 <div class="infoclass">Convener<br />
@@ -334,7 +340,6 @@ Email: <a class="email" href="mailto:mamunengr1@yahoo.com">mamunengr1@yahoo.com<
 <div class="headertitle">Exam Controller Office</div>
 
 <div class="infoclass">Exam Controller<br />
-A. K. M. Sayedul Haque Chowdhury<br />
 Vice Chancellor<br />
 Phone: <a class="telephone" href="tel:71482">71482</a><br />
 Mobile: <a class="telephone" href="tel:01730042888">01730042888</a></div>
