--- a/assets/ignoreit/committes.html
+++ b/assets/ignoreit/committes.html
@@ -37,7 +37,7 @@ p{font-size:15px}
 <p style="text-align: center;"><span style="font-size:16px;"><strong><u>Chairman</u></strong></span></p>
 
 <div class="infoclass"><strong>A. K. M. Sayedul Haque Chowdhury</strong><br />
-Vice Chancellor</div>
+Vice Chancellor (27th Sept 2010-26th Sept 2014)</div>
 
 <p style="text-align: center;"><strong><u>Members</u></strong></p>
 
@@ -78,7 +78,7 @@ Mobile: <a class="telephone" href="tel:01720197823">01720197823</a></div>
 <div style="text-align: center;"><strong><u><span style="font-size:16px;">Chairman</span></u></strong></div>
 
 <div class="infoclass"><strong>A. K. M. Sayedul Haque Chowdhury</strong><br />
-Vice Chancellor</div>
+Vice Chancellor (27th Sept 2010-26th Sept 2014)</div>
 
 <div style="text-align: center;">&nbsp;</div>
 
@@ -131,7 +131,7 @@ Mobile: <a class="telephone" href="tel:01720197825">01720197825</a></div>
 <div style="text-align: center;"><u><strong><span style="font-size:16px;">Chairman</span></strong></u></div>
 
 <div class="infoclass"><strong>A. K. M. Sayedul Haque Chowdhury</strong><br />
-Vice Chancellor</div>
+Vice Chancellor (27th Sept 2010-26th Sept 2014)</div>
 
 <div style="text-align: center;">&nbsp;</div>
 
