added on the db

--- a/assets/ignoreit/Academic_staffs.html
+++ b/assets/ignoreit/Academic_staffs.html
@@ -43,7 +43,7 @@ E-mail : <a class="email" href="mailto:sazib.bowmik@yahoo.com">sazib.bowmik@yaho
 SR Assistant<br />
 Phone : <a class="telephone" href="tel:01712232198">01712232198</a></div>
 
-<div class="infoclass"><strong>Mohammad Sharaf Uddin</strong><br />
+<div class="infoclass"><strong>Mohammad Sharaf Uddin(Sohel)</strong><br />
 SR Assistant<br />
 Phone : <a class="telephone" href="tel:01816007081">01816007081</a></div>
 
