--- a/assets/ignoreit/Academic_staffs.html
+++ b/assets/ignoreit/Academic_staffs.html
@@ -37,7 +37,7 @@ p{font-size:15px}
 <div class="infoclass"><strong>Sazib Bhowmik</strong><br />
 Lab Instructor<br />
 Phone : <a class="telephone" href="tel:01715-573929">01715-573929</a><br />
-E-mail : <a class="email" href="mailto:sazib.bowmik@yahoo.com">sazib.bowmik@yahoo.com</a></div>
+E-mail : <a class="email" href="mailto:sazib.bhowmik@yahoo.com">sazib.bowmik@yahoo.com</a></div>
 
 <div class="infoclass"><strong>Shihab Uddin</strong><br />
 SR Assistant<br />
