--- a/assets/ignoreit/CR.html
+++ b/assets/ignoreit/CR.html
@@ -105,7 +105,7 @@ Phone: <a class="telephone" href="tel:01674055971">01674055971</a></div>
 
 <p style="text-align: center;"><u><strong>7th batch</strong></u></p>
 
-<div class="infoclass"><strong>GM Saiful ISlam</strong><br />
+<div class="infoclass"><strong>GM Saiful Islam</strong>(<span class="null">Asif</span>)<br />
 Phone: <a class="telephone" href="tel:01820153827">01820153827</a></div>
 
 <p style="text-align: center;"><u><strong>8th batch</strong></u></p>
@@ -274,7 +274,7 @@ Phone: <a class="telephone" href="tel:01926863669">01926863669</a></div>
 
 <p style="text-align: center;"><u><strong>9th Batch</strong></u></p>
 
-<div class="infoclass"><strong>Tajbir</strong><br />
+<div class="infoclass"><strong>Tajbib</strong><br />
 Phone: <a class="telephone" href="tel:01781939371">01781939371</a></div>
 
 <div class="headertitle">Business Administration(BBA 10)</div>
@@ -284,10 +284,16 @@ Phone: <a class="telephone" href="tel:01781939371">01781939371</a></div>
 <div class="infoclass"><strong>Farhad</strong><br />
 Phone: <a class="telephone" href="tel:01744845755">01744845755</a></div>
 
+<div class="infoclass">CR(Female)<br />
+<strong>Fatema Binte Siraj</strong></div>
+
 <p style="text-align: center;"><strong><u>8th Batch</u></strong></p>
 
 <div class="infoclass"><strong>Araf</strong><br />
 Phone: <a class="telephone" href="tel:01681769668">01681769668</a></div>
+
+<div class="infoclass">CR(Female)<br />
+<strong>Tazrin Jahan Jinia</strong></div>
 
 <p style="text-align: center;"><u><strong>9th Batch</strong></u></p>
 
