--- a/assets/ignoreit/committes.html
+++ b/assets/ignoreit/committes.html
@@ -36,14 +36,11 @@ p{font-size:15px}
 
 <p style="text-align: center;"><span style="font-size:16px;"><strong><u>Chairman</u></strong></span></p>
 
-<div class="infoclass"><strong>A. K. M. Sayedul Haque Chowdhury</strong><br />
-Vice Chancellor (27th Sept 2010-26th Sept 2014)</div>
+<div class="infoclass">Vice Chancellor</div>
 
 <p style="text-align: center;"><strong><u>Members</u></strong></p>
 
-<div class="infoclass">Dean of the Faculty<br />
-<strong>Professor Dr. Md Abul Hossen</strong><br />
-Dean, Science Faculty.<br />
+<div class="infoclass">Dean, Science Faculty.<br />
 Phone: <a class="telephone" href="tel:62823">62823</a><br />
 Mobile: <a class="telephone" href="tel:0173012916">0173012916</a></div>
 
@@ -75,10 +72,9 @@ Mobile: <a class="telephone" href="tel:01720197823">01720197823</a></div>
 
 <div style="text-align: center;">&nbsp;</div>
 
-<div style="text-align: center;"><strong><u><span style="font-size:16px;">Chairman</span></u></strong></div>
-
-<div class="infoclass"><strong>A. K. M. Sayedul Haque Chowdhury</strong><br />
-Vice Chancellor (27th Sept 2010-26th Sept 2014)</div>
+<p>&nbsp;
+<div class="infoclass">Vice Chancellor</div>
+</p>
 
 <div style="text-align: center;">&nbsp;</div>
 
@@ -130,8 +126,7 @@ Mobile: <a class="telephone" href="tel:01720197825">01720197825</a></div>
 
 <div style="text-align: center;"><u><strong><span style="font-size:16px;">Chairman</span></strong></u></div>
 
-<div class="infoclass"><strong>A. K. M. Sayedul Haque Chowdhury</strong><br />
-Vice Chancellor (27th Sept 2010-26th Sept 2014)</div>
+<div class="infoclass">Vice Chancellor</div>
 
 <div style="text-align: center;">&nbsp;</div>
 
