--- a/assets/ignoreit/introduction.html
+++ b/assets/ignoreit/introduction.html
@@ -47,8 +47,8 @@ p{font-size:15px}
 &nbsp;<br />
 <u><strong>Departments:</strong> </u><br />
 01. Computer Science and Telecommunication Engineering (CSTE)<br />
-02. Fisheries and Marine Science (FIMS)<br />
-03. Pharmacy<br />
+02. Fisheries and Marine Science (FIMS) (<a href="http://www.fims-nstu.org">www.fims-nstu.org</a>)<br />
+03. Pharmacy (<a href="http://www.nstupharma.org">www.nstupharma.org</a>)<br />
 04. Applied Chemistry &amp; Chemical Engineering (ACCE)<br />
 05. Microbiology<br />
 06. Applied Mathematics<br />
@@ -69,12 +69,13 @@ p{font-size:15px}
 <strong>Academic Buildings: </strong>2<br />
 <strong>Administrative Building(s):</strong> 1<br />
 <strong><u>Halls</u>: </strong>2<br />
-1. Vasha Saheed Abdus Salam Hall<br />
+1. Vasha Shaheed Abdus Salam Hall<br />
 2. Hajrat Bibi Khadija Hall<br />
 &nbsp;<br />
 <strong>Dormitory:</strong> 2 (Teachers&#39; Dormatory &amp; Staffs&#39; Dormatory)<br />
 <strong>Apartment:</strong> 1<br />
 &nbsp;<br />
-<strong>Others : </strong>Sohid Minar, Liberation Sculpture, TSC Building, Central Mosque, VIP Guest House, Canteen Shed, Ansar Shed.<br />
+<strong>Others : </strong>Shaheed Minar, Liberation Sculpture, TSC Building, Central Mosque, VIP Guest House, Canteen Shed, Ansar Shed.<br />
 <strong>Central Library: </strong>Books (more than 8000).</p>
-</div>
+<strong>Official website:</strong> <a href="http://www.nstu.edu.bd">www.nstu.edu.bd</a><br />
+<strong>Email:</strong> <a class="email" href="mailto:info@nstu.edu.bd">info@nstu.edu.bd</a></div>
