--- a/assets/ignoreit/regent.html
+++ b/assets/ignoreit/regent.html
@@ -34,8 +34,7 @@ p{font-size:15px}
 
 <div class="headertitle">Chairman</div>
 
-<div class="infoclass"><strong>Prof. Dr. A. K. M. Sayedul Haque Chowdhury</strong><br />
-Vice Chancellor (27th Sept 2010-26th Sept 2014)<br />
+<div class="infoclass"><strong>Vice Chancellor</strong><br />
 Telephone: <a class="telephone" href="tel:+880-321-62833">+880-321-62833</a>, <a class="telephone" href="tel:62733">62733</a>, <a class="telephone" href="tel:62655">62655</a>.<br />
 Mobile: <a class="telephone" href="tel:01730042888">01730042888</a></div>
 
@@ -71,7 +70,8 @@ Telephone: <a class="telephone" href="tel:+88029512282">+880-2-9512282</a></div>
 	<li><span style="font-size:14px;">Three members from the research institute of Science and Technology Affairs nominated by the government.</span></li>
 </ul>
 
-<div class="infoclass"><strong>Prof. Dr. A. I. Mustafa Chairman,</strong><br />
+<div class="infoclass"><strong>Prof. Dr. A. I. Mustafa</strong><br />
+Chairman,<br />
 BCSIR.<br />
 Dr. Qudrat-E-Khuda road,<br />
 Dhanmondi, Dhaka-1205.<br />
@@ -120,7 +120,7 @@ Phone: <a class="telephone" href="tel:01711723224">01711723224</a></div>
 	<li><span style="font-size:14px;">Three representatives from the teachers of this university nominated by the academic council.</span></li>
 </ul>
 
-<div class="infoclass"><strong>Prof. Dr. Md. Abul Hossain Dean,</strong><br />
+<div class="infoclass"><strong>Dean</strong><br />
 Faculty of Science<br />
 Phone: <a class="telephone" href="tel:62823">62823</a><br />
 Mobile: <a class="telephone" href="tel:01713012916">01713012916</a></div>
