--- a/assets/ignoreit/student_activities.html
+++ b/assets/ignoreit/student_activities.html
@@ -150,6 +150,44 @@ Pharma Mirror believes in cutting-edge peer reviewed contents over the pharma ar
 
 <div class="infoclass"><strong>Download:</strong> <a href="https://www.facebook.com/download/778571238821219/mymagazine.pdf">https://www.facebook.com/download/778571238821219/mymagazine.pdf</a></div>
 
+<div class="headertitle">Economicsbd Magazine</div>
+
+<div class="infoclass">It&#39;s rudimentary educative magazine, in Bangladesh launched by Md. Mahmudul Islam Khan a student associated with Economics and poverty studies department of the University with his team consists of additional couple of university&rsquo;s students from the very same department.<br />
+<br />
+The very proposition of instituting the magazine is to provide miscellaneous info including economical articles, economics events listing, current economical job circulars of Bangladesh, featured of Bank, NGOs profile, economical news and innovation.</div>
+
+<div class="infoclass"><strong>Website:</strong> <a href="http://www.economicsbd.com">www.economicsbd.com</a></div>
+
+<div class="infoclass"><strong>Facebook Page:</strong> <a href="http://www.facebook.com/economicsbdmagazine">Economicsbdmagazine</a></div>
+
+<div class="headertitle">COASTAL ENVIRONMENT NETWORK(CEN)</div>
+
+<div class="infoclass">&quot;Coastal Environment Network(CEN)&quot; is from Department of Environmental Science and Hazard studies of Noakhali Science and technology University.<br />
+<br />
+It was established with immense hope for maintaining a peaceful, warm, pollution free Environment and to develop mechanisms to protect our sacred sites, land, water, air, natural resources, health of both our people and all living things, and to build economically sustainable communities.<br />
+<br />
+The Coastal Environment Network (CEN) facilitates networking among environmental organisations and others who share its mandate to protect the Earth and promote ecologically sound ways of life.The CEN works directly with concerned citizens and organisations striving to protect, preserve, and restore the environment. This Coastal Environment Network family is fully determined to gain its ultimate goal of success.</div>
+
+<div class="infoclass"><strong>Facebook group:</strong> <a href="http://goo.gl/ud8q7v">http://goo.gl/ud8q7v</a></div>
+
+<div class="infoclass"><strong>Dept. group:</strong> <a href="http://goo.gl/s8HXEt">http://goo.gl/s8HXEt</a></div>
+
+<div class="headertitle">DreamBazz Filmz</div>
+
+<div class="infoclass">Films tell the story of life. Film is a combination of happiness , sadness, pain, hatred, anger, music,dance, architecture, sculpture. For the centuries, films have been playing a pivotal role in changing the society. Therefore, we organize a film society named &quot; DreamBazz Filmz &quot; at NSTU in order to change the society through our films.We,some youngsters of NSTU dream to bring the story of life on big screen.We, belive that film is a journey of life.You can also be a proud passanger of this amazing journey.<br />
+<br />
+<strong>Works:</strong><br />
+1.We hold weekly meeting to discuss about films.<br />
+2.We ask stories and scripts for short films and full length movies through competition.<br />
+3.We make short films and full length movies from selected stories.<br />
+<br />
+<strong>Our Running Project:</strong><br />
+এটা গল্প হলেও পারতো।<br />
+<strong>Our Upcoming Project:</strong><br />
+ILLUSION-A short film.</div>
+
+<div class="infoclass"><strong>Facebook page: </strong><a href="http://facebook.com/profile.php?id=669912476438923">DreamBazz Filmz</a></div>
+
 <div class="headertitle">Journalist of Our University</div>
 
 <div class="infoclass"><strong>Rezaul Karim Bhuiyan Sohag</strong><br />
