--- a/assets/ignoreit/department.html
+++ b/assets/ignoreit/department.html
@@ -48,7 +48,7 @@ Email: <a class="email" href="mailto:javed.nstu@gmail.com">javed.nstu@gmail.com<
 
 <p style="text-align: center;"><span style="font-size:14px;"><u><strong>Assistant Professor</strong></u></span></p>
 
-<div class="infoclass"><strong>Mr. Ashadun Nobi </strong>(Study Leave)<br />
+<div class="infoclass"><strong>Ashadun Nobi </strong>(Study Leave)<br />
 Email: <a class="email" href="mailto:ashadunnobi_305@yahoo.com">ashadunnobi_305@yahoo.com</a></div>
 
 <div class="infoclass"><strong>Md. Bellal Hossain</strong><br />
@@ -85,7 +85,7 @@ Email: <a class="email" href="mailto:nahid_nstu@yahoo.com">nahid_nstu@yahoo.com<
 Phone: <a class="telephone" href="tel:01718422881">01718422881</a><br />
 Email: <a class="email" href="mailto:nazia_majadi@yahoo.com">nazia_majadi@yahoo.com</a></div>
 
-<div class="infoclass"><strong>Mr. Amran Hossen bhuiyan</strong>(Study Leave)<br />
+<div class="infoclass"><strong>Amran Hossen bhuiyan</strong>(Study Leave)<br />
 Phone: <a class="telephone" href="tel:01717194634">01717194634</a><br />
 Email: <a class="email" href="mailto:amran_apece@yahoo.com">amran_apece@yahoo.com</a></div>
 
@@ -100,70 +100,86 @@ Email: <a class="email" href="mailto:im_towhid@yahoo.com">im_towhid@yahoo.com</a
 <div class="headertitle">Fisheries and Marine Science (FIMS 02)</div>
 
 <div class="infoclass"><strong>DR. MD. ABUL HOSSAIN</strong><br />
-Dean, Faculty of Science &amp; Professor, Dept. of Fisheries and Marine Science<br />
+Pro Vice Chancellor,<br />
+Dean, Faculty of Science &amp; Professor,<br />
+Dept. of Fisheries and Marine Science<br />
 Phone: <a class="telephone" href="tel:+88032171484">+88032171484</a>, Fax: <a class="telephone" href="tel:+88032162788">+88032162788</a><br />
 Mobile: <a class="telephone" href="tel:01713012916">01713012916</a><br />
-Email: <a class="email" href="mailto:sazib.bhowmik@yahoo.com">mah1754@gmail.com</a></div>
+Email: <a class="email" href="mailto:sazib.bhowmik@yahoo.com">mah1754@gmail.com</a><br />
+website: <a href="www.fims-nstu.org">www.fims-nstu.org</a></div>
 
 <p style="text-align: center;"><u><strong>Associate Professor and Chairman</strong></u></p>
 
 <div class="infoclass"><strong>DR. MD. JAHANGIR SARKER</strong><br />
 Phone: <a class="telephone" href="tel:+88032171487">+880-321-71487</a>, Fax: <a class="telephone" href="tel:+88032162788">+880-321-62788</a><br />
 Mobile: <a class="telephone" href="tel:01733910237">01733910237</a><br />
-Email: <a class="email" href="mailto:swaponj@yahoo.com">swaponj@yahoo.com</a></div>
+Email: <a class="email" href="mailto:swaponj@yahoo.com">swaponj@yahoo.com</a><br />
+website: <a href="www.fims-nstu.org">www.fims-nstu.org</a></div>
 
 <p style="text-align: center;"><u><strong>Assistant Professor</strong></u></p>
 
 <div class="infoclass"><strong>A.F.M. ARIFUR RAHMAN</strong><br />
 Mobile: <a class="telephone" href="tel:01819129553">01819129553</a><br />
-Email: <a class="email" href="mailto:arif_du2002@yahoo.com">arif_du2002@yahoo.com &nbsp;</a></div>
+Email: <a class="email" href="mailto:arif_du2002@yahoo.com">arif_du2002@yahoo.com &nbsp;</a><br />
+website: <a href="www.fims-nstu.org">www.fims-nstu.org</a></div>
 
 <div class="infoclass"><strong>MEHEDI MAHMUDUL HASAN</strong><br />
 Mobile: <a class="telephone" href="tel:01727240180">01727240180</a><br />
-Email: <a class="email" href="mailto:mehedi_nstu@yahoo.com">mehedi_nstu@yahoo.com</a></div>
+Email: <a class="email" href="mailto:mehedi_nstu@yahoo.com">mehedi_nstu@yahoo.com</a><br />
+website: <a href="www.fims-nstu.org">www.fims-nstu.org</a></div>
 
 <div class="infoclass"><strong>MOHAMMAD BELAL HOSSAIN</strong> (Study Leave)<br />
 Phone: <a class="telephone" href="tel:+6738665470">+6738665470</a>, <a class="telephone" href="tel:+8801711781550">+8801711781550</a><br />
-Email: <a class="email" href="mailto:belalhossain@yahoo.com">belalhossain@yahoo.com</a>, <a class="email" href="mailto:mbhnstu@gmail.com">mbhnstu@gmail.com</a></div>
+Email: <a class="email" href="mailto:belalhossain@yahoo.com">belalhossain@yahoo.com</a>, <a class="email" href="mailto:mbhnstu@gmail.com">mbhnstu@gmail.com</a><br />
+website: <a href="www.fims-nstu.org">www.fims-nstu.org</a></div>
 
 <div class="infoclass"><strong>MD. RAKEB-UL-ISLAM</strong> (Study Leave)<br />
 Mobile: <a class="telephone" href="tel:+8801716783991">+8801716783991</a><br />
-Email: <a class="email" href="mailto:mrakeb_82bau@yahoo.com">mrakeb_82bau@yahoo.com</a>, <a class="email" href="mailto:r.islam@griffithuni.edu.au">r.islam@griffithuni.edu.au</a></div>
+Email: <a class="email" href="mailto:mrakeb_82bau@yahoo.com">mrakeb_82bau@yahoo.com</a>, <a class="email" href="mailto:r.islam@griffithuni.edu.au">r.islam@griffithuni.edu.au</a><br />
+website: <a href="www.fims-nstu.org">www.fims-nstu.org</a></div>
 
 <div class="infoclass"><strong>BHAKTA SUPRATIM SARKER</strong><br />
 Mobile: <a class="telephone" href="tel:+8801911712791">+8801911712791</a><br />
-Email: <a class="email" href="mailto:vktt1979@yahoo.com">vktt1979@yahoo.com</a></div>
+Email: <a class="email" href="mailto:vktt1979@yahoo.com">vktt1979@yahoo.com</a><br />
+website: <a href="www.fims-nstu.org">www.fims-nstu.org</a></div>
 
 <div class="infoclass"><strong>ABDULLAH-AL MAMUN</strong> (Study Leave)<br />
 Mobile: <a class="telephone" href="tel:+8801712928710">+8801712928710</a><br />
-Email: <a class="email" href="mailto:mamun_au22@yahoo.com">mamun_au22@yahoo.com</a>, <a class="email" href="mailto:a.m.mamun@stir.ac.uk">a.m.mamun@stir.ac.uk</a></div>
+Email: <a class="email" href="mailto:mamun_au22@yahoo.com">mamun_au22@yahoo.com</a>, <a class="email" href="mailto:a.m.mamun@stir.ac.uk">a.m.mamun@stir.ac.uk</a><br />
+website: <a href="www.fims-nstu.org">www.fims-nstu.org</a></div>
 
 <div class="infoclass"><strong>DEBASISH SAHA </strong>(Study Leave)<br />
 Mobile: <a class="telephone" href="tel:+818048462076">+818048462076</a>, <a class="telephone" href="tel:+8801714888206">+8801714888206</a><br />
-Email: <a class="email" href="mailto:ds_bau@yahoo.com">ds_bau@yahoo.com</a></div>
+Email: <a class="email" href="mailto:ds_bau@yahoo.com">ds_bau@yahoo.com</a><br />
+website: <a href="www.fims-nstu.org">www.fims-nstu.org</a></div>
 
 <div class="infoclass"><strong>MD. MOFIZUR RAHMAN </strong>(RIPON)<br />
 Mobile: <a class="telephone" href="tel:+8801712516953">+8801712516953</a><br />
-Email: <a class="email" href="mailto:riponfisheries@gmail.com">riponfisheries@gmail.com</a>, <a class="email" href="mailto:ripondu31184@yahoo.com">ripondu31184@yahoo.com</a></div>
+Email: <a class="email" href="mailto:riponfisheries@gmail.com">riponfisheries@gmail.com</a>, <a class="email" href="mailto:ripondu31184@yahoo.com">ripondu31184@yahoo.com</a><br />
+website: <a href="www.fims-nstu.org">www.fims-nstu.org</a></div>
 
 <div class="infoclass"><strong>MD. ANISUZZAMAN RIMON</strong>(Study Leave)<br />
 Mobile: <a class="telephone" href="tel:+8801717499749">+8801717499749</a><br />
-Email: <a class="email" href="mailto:rimon49@yahoo.com">rimon49@yahoo.com</a></div>
+Email: <a class="email" href="mailto:rimon49@yahoo.com">rimon49@yahoo.com</a><br />
+website: <a href="www.fims-nstu.org">www.fims-nstu.org</a></div>
 
 <div class="infoclass"><strong>MD. ROBIUL HASAN </strong>(RONY)<br />
 Mobile: <a class="telephone" href="tel:+8801718589668">+8801718589668</a><br />
-Email: <a class="email" href="mailto:rhasan_rony@yahoo.com">rhasan_rony@yahoo.com</a></div>
+Email: <a class="email" href="mailto:rhasan_rony@yahoo.com">rhasan_rony@yahoo.com</a><br />
+website: <a href="www.fims-nstu.org">www.fims-nstu.org</a></div>
 
 <p style="text-align: center;"><u><strong>Lecturer</strong></u></p>
 
 <div class="infoclass"><strong>MAHABUBUR RAHMAN</strong> (FARHAD)<br />
 Mobile: <a class="telephone" href="tel:01717296238">01717-296238</a><br />
-Email: <a class="email" href="mailto:farhad.mrf@gmail.com">farhad.mrf@gmail.com</a></div>
+Email: <a class="email" href="mailto:farhad.mrf@gmail.com">farhad.mrf@gmail.com</a><br />
+website: <a href="www.fims-nstu.org">www.fims-nstu.org</a></div>
 
 <div class="infoclass"><strong>M. GOLAM MUSTAFA</strong><br />
 Qualification: B.Sc (Hon&rsquo;s), M.Sc (Marine Sciences)<br />
 Mobile: <a class="telephone" href="tel:+8801712186434">+8801712-186434</a><br />
-Email: <a class="email" href="mailto:mustafa.nstu2013@gmail.com">mustafa.nstu2013@gmail.com</a></div>
+Email: <a class="email" href="mailto:mustafa.nstu2013@gmail.com">mustafa.nstu2013@gmail.com</a><br />
+website: <a href="www.fims-nstu.org">www.fims-nstu.org</a></div>
 
 <div class="headertitle">Pharmacy (03)</div>
 
@@ -173,69 +189,83 @@ Email: <a class="email" href="mailto:mustafa.nstu2013@gmail.com">mustafa.nstu201
 Phone: <a class="telephone" href="tel:71483">71483</a><br />
 Mobile: <a class="telephone" href="tel:01711200410">01711200410</a><br />
 Email: <a class="email" href="mailto:pharmasalim@yahoo.com">pharmasalim@yahoo.com</a><br />
-&nbsp;</div>
+website: <a href="www.nstupharma.org">www.nstupharma.org</a></div>
 
 <p style="text-align: center;"><strong><u>Associate Professor</u></strong></p>
 
 <div class="infoclass"><strong>Dr. Mohammad Safiqul Islam</strong><br />
 Phone: <a class="telephone" href="tel:01714165107">01714165107</a><br />
-Email: <a class="email" href="mailto:research_safiq@yahoo.com">research_safiq@yahoo.com</a></div>
+Email: <a class="email" href="mailto:research_safiq@yahoo.com">research_safiq@yahoo.com</a><br />
+website: <a href="www.nstupharma.org">www.nstupharma.org</a></div>
 
 <p style="text-align: center;"><u><strong>Assistant Professor</strong></u></p>
 
 <div class="infoclass"><strong>Mohammad Anwarul Basher </strong>(Study Leave)<br />
 Phone: <a class="telephone" href="tel:01726742586">01726742586</a><br />
-Email: <a class="email" href="mailto:mabasher@live.com">mabasher@live.com</a></div>
+Email: <a class="email" href="mailto:mabasher@live.com">mabasher@live.com</a><br />
+website: <a href="www.nstupharma.org">www.nstupharma.org</a></div>
 
 <div class="infoclass"><strong>A F M Sohidullah </strong>(Study Leave)<br />
 Phone: <a class="telephone" href="tel:01911711457">01911711457</a><br />
-Email: <a class="email" href="mailto:shahidnstu@gmail.com">shahidnstu@gmail.com</a></div>
+Email: <a class="email" href="mailto:shahidnstu@gmail.com">shahidnstu@gmail.com</a><br />
+website: <a href="www.nstupharma.org">www.nstupharma.org</a></div>
 
 <div class="infoclass"><strong>Md. Mizanur Rahman Moghal</strong><br />
 Phone: <a class="telephone" href="tel:01190314094">01190314094</a><br />
-Email: <a class="email" href="mailto:mizan.phar@gmail.com">mizan.phar@gmail.com</a></div>
+Email: <a class="email" href="mailto:mizan.phar@gmail.com">mizan.phar@gmail.com</a><br />
+website: <a href="www.nstupharma.org">www.nstupharma.org</a></div>
 
-<div class="infoclass"><strong>Mr. Palash Karmakar</strong><br />
+<div class="infoclass"><strong>Palash Karmakar</strong><br />
 Phone: <a class="telephone" href="tel:01717036968">01717036968</a><br />
-Email: <a class="email" href="mailto:pknstu@gmail.com">pknstu@gmail.com</a></div>
+Email: <a class="email" href="mailto:pknstu@gmail.com">pknstu@gmail.com</a><br />
+website: <a href="www.nstupharma.org">www.nstupharma.org</a></div>
 
-<div class="infoclass"><strong>Mr. Jamiuddin Ahmed</strong><br />
+<div class="infoclass"><strong>Jamiuddin Ahmed</strong><br />
 Phone: <a class="telephone" href="tel:01199113606">01199113606</a><br />
-Email: <a class="email" href="mailto:ajami_ju@yahoo.com">ajami_ju@yahoo.com</a></div>
+Email: <a class="email" href="mailto:ajami_ju@yahoo.com">ajami_ju@yahoo.com</a><br />
+website: <a href="www.nstupharma.org">www.nstupharma.org</a></div>
 
 <div class="infoclass"><strong>Latifa Bulbul</strong><br />
 Phone: <a class="telephone" href="tel:01741676362">01741676362</a><br />
-Email: <a class="email" href="mailto:prova_pharm32@yahoo.com">prova_pharm32@yahoo.com</a></div>
+Email: <a class="email" href="mailto:prova_pharm32@yahoo.com">prova_pharm32@yahoo.com</a><br />
+website: <a href="www.nstupharma.org">www.nstupharma.org</a></div>
 
 <p style="text-align: center;"><u><strong>Lecturer</strong></u></p>
 
 <div class="infoclass"><strong>Biswa Nath Das</strong>(Study Leave)<br />
 Phone: <a class="telephone" href="tel:01715405777">01715405777</a><br />
-Email: <a class="email" href="mailto:biswal121@yahoo.com">biswal121@yahoo.com</a></div>
+Email: <a class="email" href="mailto:biswal121@yahoo.com">biswal121@yahoo.com</a><br />
+website: <a href="www.nstupharma.org">www.nstupharma.org</a></div>
 
 <div class="infoclass"><strong>Md Ariful Islam</strong> (Study Leave)<br />
 Phone: <a class="telephone" href="tel:01764145384">01764145384</a><br />
-Email: <a class="email" href="mailto:arifnixon@yahoo.com">arifnixon@yahoo.com</a></div>
+Email: <a class="email" href="mailto:arifnixon@yahoo.com">arifnixon@yahoo.com</a><br />
+website: <a href="www.nstupharma.org">www.nstupharma.org</a></div>
 
 <div class="infoclass"><strong>Md. Hasanuzzaman</strong> (Study Leave)<br />
 Phone: <a class="telephone" href="tel:01715758888">01715758888</a><br />
-Email: <a class="email" href="mailto:hasanprdu@gmail.com">hasanprdu@gmail.com</a></div>
+Email: <a class="email" href="mailto:hasanprdu@gmail.com">hasanprdu@gmail.com</a><br />
+website: <a href="www.nstupharma.org">www.nstupharma.org</a></div>
 
 <div class="infoclass"><strong>Md. Mamun ur Rashid</strong><br />
 Phone: <a class="telephone" href="tel:01911141120">01911141120</a><br />
-Email: <a class="email" href="mailto:mamun_pharma@yahoo.com">mamun_pharma@yahoo.com</a></div>
+Email: <a class="email" href="mailto:mamun_pharma@yahoo.com">mamun_pharma@yahoo.com</a><br />
+website: <a href="www.nstupharma.org">www.nstupharma.org</a></div>
 
 <div class="infoclass"><strong>Md. Monir Hossain</strong><br />
 phone: <a class="telephone" href="tel:01670117946">01670117946</a><br />
-Email: <a class="email" href="mailto:monir.pharma@yahoo.com">monir.pharma@yahoo.com</a></div>
+Email: <a class="email" href="mailto:monir.pharma@yahoo.com">monir.pharma@yahoo.com</a><br />
+website: <a href="www.nstupharma.org">www.nstupharma.org</a></div>
 
 <div class="infoclass"><strong>Sujan Banik</strong><br />
-Phone: <a class="telephone" href="tel:01727446920">01727446920</a></div>
+Phone: <a class="telephone" href="tel:01727446920">01727446920</a><br />
+website: <a href="www.nstupharma.org">www.nstupharma.org</a></div>
 
 <div class="infoclass">
 <div><strong>Mariyam Akter</strong></div>
 
-<div>Phone: <a class="telephone" href="tel:01738125060">01738125060</a></div>
+<div>Phone: <a class="telephone" href="tel:01738125060">01738125060</a><br />
+website: <a href="www.nstupharma.org">www.nstupharma.org</a></div>
 </div>
 
 <div class="headertitle">Applied Chemistry &amp; Chemical Engineering (ACCE 04)</div>
@@ -275,7 +305,7 @@ Email: <a class="email" href="mailto:ashraf.nstu@yahoo.com">ashraf.nstu@yahoo.co
 Phone: <a class="telephone" href="tel:01712197256">01712197256</a><br />
 Email: <a class="email" href="mailto:kajol_noori@yahoo.com">kajol_noori@yahoo.com</a></div>
 
-<div class="infoclass"><strong>Mr. Juganta Kumar Roy</strong> (Study Leave)<br />
+<div class="infoclass"><strong>Juganta Kumar Roy</strong> (Study Leave)<br />
 Phone: <a class="telephone" href="tel:01713425486">01713425486</a><br />
 Email: <a class="email" href="mailto:juganta280@yahoo.com">juganta280@yahoo.com</a></div>
 
