--- a/assets/ignoreit/CR.html
+++ b/assets/ignoreit/CR.html
@@ -39,6 +39,9 @@ p{font-size:15px}
 <div class="infoclass"><strong>Syful Islam</strong><br />
 Phone: <a class="telephone" href="tel:01823024498">01823024498</a></div>
 
+<div class="infoclass">CR(Female):<br />
+<strong>Nabanita Bissas</strong></div>
+
 <p style="text-align: center;"><u><strong>6th Batch</strong></u></p>
 
 <div class="infoclass"><strong>Azizul Hakim Suzan</strong><br />
@@ -49,12 +52,18 @@ Phone: <a class="telephone" href="tel:01682865296">01682865296</a>, <a class="te
 <div class="infoclass"><strong>Mukit Ahmed Khan</strong><br />
 Phone: <a class="telephone" href="tel:01816069622">01816069622</a></div>
 
+<div class="infoclass">CR(Female):<br />
+<b>Tahmina Akter Tani</b></div>
+
 <p style="text-align: center;"><strong><u>&nbsp;8th Batch</u></strong></p>
 
 <div class="infoclass"><strong>Asim Bissas</strong><br />
 Phone: <a class="telephone" href="tel:01738901346">01738901346</a></div>
 
 <p style="text-align: center;"><u><strong>&nbsp;9th batch</strong></u></p>
+
+<div class="infoclass"><strong>Mukarrom Yahiya</strong><br />
+Phone: <a class="telephone" href="tel:01672216547">01672216547</a></div>
 
 <div class="infoclass"><strong>Robiul Auwal</strong><br />
 Phone: <a class="telephone" href="tel:01827893381">01827893381</a></div>
@@ -78,8 +87,11 @@ Phone: <a class="telephone" href="tel:01716598313">01716598313</a></div>
 
 <p style="text-align: center;"><u><strong>8th Batch</strong></u></p>
 
-<div class="infoclass">Fahad<br />
+<div class="infoclass"><strong><span data-ft="{&quot;tn&quot;:&quot;K&quot;}" data-reactid=".5i6.1:3:1:$comment337534039766637_337548096431898:0.0.$right.0.$left.0.0.1:$comment-body"><span class="UFICommentBody" data-reactid=".5i6.1:3:1:$comment337534039766637_337548096431898:0.0.$right.0.$left.0.0.1:$comment-body.0"><span data-reactid=".5i6.1:3:1:$comment337534039766637_337548096431898:0.0.$right.0.$left.0.0.1:$comment-body.0.$end:0:$0:0">Badsha Fahad</span></span></span></strong><br />
 Phone: <a class="telephone" href="tel:01818967555">01818967555</a></div>
+
+<div class="infoclass"><strong>CR(Female)</strong><br />
+Sanjida Afrin Semme</div>
 
 <p style="text-align: center;"><strong><u>9th Batch</u></strong></p>
 
@@ -206,7 +218,7 @@ Phone: <a class="telephone" href="tel:01925092949">01925092949</a></div>
 
 <p style="text-align: center;"><u><strong>9th Batch</strong></u></p>
 
-<div class="infoclass"><strong>Nul Alam</strong><br />
+<div class="infoclass"><strong>Nur Alam</strong><br />
 Phone: <a class="telephone" href="tel:01965325752">01965325752</a></div>
 
 <div class="infoclass">Cr(Female)<br />
@@ -250,7 +262,7 @@ Phone: <a class="telephone" href="tel:01917904877">01917904877</a></div>
 Phone: <a class="telephone" href="tel:01731734741">01731734741</a></div>
 
 <div class="infoclass">CR(Female):<br />
-<strong>Moyurakkhi Chowdhury</strong></div>
+<strong><span class="null">Mayurakhsi Chowdhury</span></strong></div>
 
 <p style="text-align: center;"><u><strong>9th batch</strong></u></p>
 
@@ -269,8 +281,11 @@ Phone: <a class="telephone" href="tel:01672783818">01672783818</a></div>
 
 <p style="text-align: center;"><u><strong>8th Batch</strong></u></p>
 
-<div class="infoclass"><strong>Hasib</strong><br />
+<div class="infoclass"><strong><span data-ft="{&quot;tn&quot;:&quot;K&quot;}" data-reactid=".5i6.1:3:1:$comment337534039766637_337681196418588:0.0.$right.0.$left.0.0.1:$comment-body"><span class="UFICommentBody" data-reactid=".5i6.1:3:1:$comment337534039766637_337681196418588:0.0.$right.0.$left.0.0.1:$comment-body.0"><span data-reactid=".5i6.1:3:1:$comment337534039766637_337681196418588:0.0.$right.0.$left.0.0.1:$comment-body.0.$end:0:$0:0">Md.Obaydullah Al Hasib</span></span></span></strong><br />
 Phone: <a class="telephone" href="tel:01926863669">01926863669</a></div>
+
+<div class="infoclass"><strong>CR(Female)</strong><br />
+Jobaida Soma</div>
 
 <p style="text-align: center;"><u><strong>9th Batch</strong></u></p>
 
