updated link of dolan mony

--- a/assets/ignoreit/academic_calendar.html
+++ b/assets/ignoreit/academic_calendar.html
@@ -60,7 +60,7 @@ p{font-size:15px}
 
 <div class="infoclass">Akheri Chahar Shomba (1st january)</div>
 
-<div class="infoclass">Eid-E-Miladunnabi (14th January</div>
+<div class="infoclass">Eid-E-Miladunnabi (14th January)</div>
 
 <div class="infoclass">Saraswati Puja (4th February)</div>
 
@@ -84,7 +84,7 @@ p{font-size:15px}
 
 <div class="infoclass">Shab-E-Borat (14th June)</div>
 
-<div class="infoclass">University Day (22th June</div>
+<div class="infoclass">University Day (22th June)</div>
 
 <div class="infoclass">Juma-tul-Wida (25th July)</div>
 
