--- a/assets/ignoreit/halloffice.html
+++ b/assets/ignoreit/halloffice.html
@@ -108,7 +108,7 @@ Phone: <a class="telephone" href="tel:+8801710586359">+8801710586359</a><br />
 Fax: <a class="telephone" href="tel:+88032162788">+88032162788</a><br />
 Email: <a class="email" href="mailto:mhrubel_188@yahoo.com">mhrubel_188@yahoo.com</a></div>
 
-<div class="infoclass"><strong>MD. ROBIUL HASAN (RONY)</strong><br />
+<div class="infoclass"><strong>Md. Robiul Hasan(Rony)</strong><br />
 Mobile: <a class="telephone" href="tel:+8801718589668">+8801718589668</a><br />
 Email: <a class="email" href="mailto:rhasan_rony@yahoo.com">rhasan_rony@yahoo.com</a></div>
 
