--- a/assets/ignoreit/Academic_officiary.html
+++ b/assets/ignoreit/Academic_officiary.html
@@ -30,7 +30,7 @@ p{font-size:15px}
 }
 .Email:hover{color:#29b6f6}
 </style>
-<div class="maintitle">Academic Staffs</div>
+<div class="maintitle">Academic Officiary</div>
 
 <div class="headertitle">Computer Science and Telecommunication Engineering (CSTE)</div>
 
