--- a/assets/ignoreit/emergency.html
+++ b/assets/ignoreit/emergency.html
@@ -60,7 +60,7 @@ Fax: <a class="telephone" href="tel:61123">61123</a></div>
 
 <div class="infoclass"><strong>OC</strong>, Sudharam: <a class="telephone" href="tel:62067">62067</a>, <a class="telephone" href="tel:62281">62281</a></div>
 
-<div class="headertitle">Fire Service</div>
+<div class="headertitle">Fire Station</div>
 
 <div class="infoclass"><strong>Assistant Director:</strong> <a class="telephone" href="tel:61258">61258</a></div>
 
