--- a/assets/ignoreit/message_developer.html
+++ b/assets/ignoreit/message_developer.html
@@ -32,7 +32,7 @@ p{font-size:15px}
 </style>
 <div class="maintitle">Conclusion</div>
 
-<div class="infoclass">প্রথমে সর্বশক্তিমান সৃষ্টিকর্তাকে ধন্যবাদ যার কৃপায় আমরা আমাদের এত বড় প্রজেক্ট মোটামুটি হলেও শেষ করতে পেরেছি। এই প্রজেক্টের সবচেয়ে চ্যালেঞ্জিং অংশ ছিল সঠিক এবং নির্ভুল তথ্য দেয়া। কিন্তু একটা উচ্চশিক্ষার প্রতিষ্ঠানগুলোতে সকল কাজ সঠিকভাবে সম্পন্ন করার জন্য বিভিন্ন পর্যায়ের অনেক সংখ্যাক ব্যাক্তি নিয়োগ থাকেন। অনেকেরই পদন্নোতি হয়, অনেকে শিক্ষাছুটিতে দেশের বাহিরে অবস্থান নেন এবং কোন বিশেষ ভূমিকায় দ্বায়িত্বপ্রাপ্ত ব্যাক্তিদের মধ্যেও পরিবর্তন ঘটে। ব্যাপারটা এমন যে আজ এপ পাবলিশের পর যেই ইনফরমেশন আছে,তা আগামী তিন থেকে ৬ মাসের মধ্যে পর চেক করলে দেখা যাবে এতেও অনেক পরিবর্তন করা দরকার। যাই হোক, তবুও আমরা চেষ্টা করেছি সর্বশেষ তথ্যটি দিতে। ২০১৪ সালের জানুয়ারী মাসে করা রেজিস্টার অফিস থেকে যে ডায়রী সরবরাহ করা হয়েছিল তার সাহায্য নেয়া হয়েছে এপ্লিকেশনটি তৈরি করার সময়। সেখানে তথ্যগুলো বাংলাতে ছিল, তা আবার ইংরেজিতে কনভার্ট করতে হয়েছে। তারপর ডায়রী থেকে পাওয়া তথ্যও আমরা ম্যানুয়্যালী আপডেট করেছি বিশেষ করে শিক্ষক ও একাডেমিক ভবনের স্টাফদের ক্ষেত্রে। ডায়রীতে নেই কিন্তু ছাত্রদের জন্য প্রয়োজনীয় অনেক তথ্য বিভিন্ন জায়গা থেকে সংগ্রহ করেছি। তবুও এখানে ১০০ % তথ্যের মধ্যে ২-৩ % তথ্য সমস্যা থাকতে পারে।&nbsp; আমরা চেষ্টা করেছি একটা প্ল্যাটফর্ম তৈরি করে যেতে, প্রথম ভার্সন হওয়ায় ভুল ত্রুটি স্বাভাবিক। সেক্ষেত্রে আমাদের সাথে সাথে ইমেইল করে জানাবেন। &nbsp; আমরা আপনার তথ্যটি ভেরিফাই করে আমাদের সার্ভারে ঠিক করে ফেলব। পরবর্তী ভার্সনে ইউজার নিভুল তথ্য পাবেন।<br />
+<div class="infoclass">প্রথমে সর্বশক্তিমান সৃষ্টিকর্তাকে ধন্যবাদ যার কৃপায় আমরা আমাদের এত বড় প্রজেক্ট মোটামুটি হলেও শেষ করতে পেরেছি। এই প্রজেক্টের সবচেয়ে চ্যালেঞ্জিং অংশ ছিল সঠিক এবং নির্ভুল তথ্য দেয়া। কিন্তু একটা উচ্চশিক্ষার প্রতিষ্ঠানগুলোতে সকল কাজ সঠিকভাবে সম্পন্ন করার জন্য বিভিন্ন পর্যায়ের অনেক সংখ্যক ব্যক্তি নিয়োগ থাকেন। অনেকেরই পদন্নোতি হয়, অনেকে শিক্ষাছুটিতে দেশের বাহিরে অবস্থান নেন এবং কোন বিশেষ ভূমিকায় দ্বায়িত্বপ্রাপ্ত ব্যাক্তিদের মধ্যেও পরিবর্তন ঘটে। ব্যাপারটা এমন যে আজ এপ পাবলিশের পরে যেই ইনফরমেশন আছে,তা আগামী তিন থেকে ৬ মাসের মধ্যে পর চেক করলে দেখা যাবে এতেও অনেক পরিবর্তন করা দরকার। যাই হোক, তবুও আমরা চেষ্টা করেছি সর্বশেষ তথ্যটি দিতে। ২০১৪ সালের জানুয়ারী মাসে করা রেজিস্টার অফিস থেকে যে ডায়রী সরবরাহ করা হয়েছিল তার সাহায্য নেয়া হয়েছে এপ্লিকেশনটি তৈরি করার সময়। সেখানে তথ্যগুলো বাংলাতে ছিল, তা আবার ইংরেজিতে কনভার্ট করতে হয়েছে। তারপর ডায়রী থেকে পাওয়া তথ্যও আমরা ম্যানুয়্যালী আপডেট করেছি বিশেষ করে শিক্ষক ও একাডেমিক ভবনের স্টাফদের ক্ষেত্রে। ডায়রীতে নেই কিন্তু ছাত্রদের জন্য প্রয়োজনীয় অনেক তথ্য বিভিন্ন জায়গা থেকে সংগ্রহ করেছি। তবুও এখানে ১০০ % তথ্যের মধ্যে ২-৩ % তথ্য সমস্যা থাকতে পারে।&nbsp; আমরা চেষ্টা করেছি একটা প্ল্যাটফর্ম তৈরি করে যেতে, প্রথম ভার্সন হওয়ায় ভুল ত্রুটি স্বাভাবিক। সেক্ষেত্রে আমাদের সাথে সাথে ইমেইল করে জানাবেন। &nbsp; আমরা আপনার তথ্যটি ভেরিফাই করে আমাদের সার্ভারে ঠিক করে ফেলব। পরবর্তী ভার্সনে ইউজার নিভুল তথ্য পাবেন।<br />
 <br />
 যদিও গুগল প্লে সার্ভিস স্টোর এপ্লিকেশন আপডেট সিস্টেম দেয় তবুও তথ্য আরো নির্ভুল রাখার জন্য আমরা সফটওয়্যারে নতুন আরেকটা Custom Update ফিচার যোগ করেছি। এটা আমাদের সার্ভারে থাকা ভার্সনকে পিং করবে। যদি তথ্য আপডেট হয় তাহলে ভার্সন চেঞ্জ হবে। ফলে ইউজার ইন্টারনেট চালু করে এপ্লিকেশনটি অন করলেই দেখতে পারবেন কি কি তথ্য আপডেট হয়েছে। এবং ইউজার download now তে ক্লিক করে নতুন ভার্সনটি ডাউনলোড করে নিবেন এবং ইন্সটল করবেন।<br />
 <br />
@@ -99,6 +99,11 @@ EPS 8th Batch<br />
 <a class="web" href="http://fb.com/economicsbdmagazine">www.fb.com/economicsbdmagazine</a><br />
 <a class="web" href="http://fb.com/shiblu.khan.96">www.fb.com/shiblu.khan.96</a></div>
 
+<div class="infoclass"><strong>Md. Hamid Al Muktadir</strong><br />
+EPS 8th Batch<br />
+<a class="web" href="http://fb.com/Muktadirhamid">www.fb.com/Muktadirhamid</a></div>
+
+
 <div class="infoclass"><strong>Robiul Awal</strong><br />
 CSTE 9th Batch<br />
 <a class="web" href="http://fb.com/rabiulawal2233">www.fb.com/rabiulawal2233</a></div>
@@ -126,9 +131,11 @@ ACCE<br />
 MBG 5th<br />
 <a class="web" href="http://fb.com/arup.ghosh.77582">www.fb.com/arup.ghosh.77582</a></div>
 
-<div class="infoclass"><strong>Dolon Moni</strong><br />
+<div class="infoclass"><strong>Dolan Moni</strong><br />
 Applied Mathmatics<br />
-6th Batch</div>
+6th Batch<br />
+<a class="web" href="http://fb.com/dolan.moni">www.fb.com/dolan.moni</a></div>
+</div>
 
 <div class="infoclass"><strong>Rezaul Karim Bhuiyan Sohag</strong><br />
 Applied Mathmatics<br />
