--- a/assets/ignoreit/introduction.html
+++ b/assets/ignoreit/introduction.html
@@ -41,7 +41,7 @@ p{font-size:15px}
 <strong>Bill Passed at:</strong> 15th July, 2001<br />
 <strong>Bill Effective at:</strong> 25th August, 2003<br />
 <strong>Academic program started from:</strong> 22nd June, 2006<br />
-<strong>Location:</strong> 8 Kilometer south from Noakhali Town, and at the west side of Sonapur-Char Jabbar road.<br />
+<strong>Location:</strong> 8 Kilometer south from Noakhali Town, and at the west side of Sonapur-SubornoChar road.<br />
 <strong>Area:</strong> 101 Acres.<br />
 <strong>Faculty:</strong> 3<br />
 &nbsp;<br />
