--- a/assets/ignoreit/admission.html
+++ b/assets/ignoreit/admission.html
@@ -298,7 +298,23 @@ Total marks are 100. Pass marks are 40.<br />
 <div class="infoclass"><strong>Group: </strong>Group D<br />
 <strong>Name of the Department:</strong> Economics &amp; Poverty Studies</div>
 
-<p>&nbsp;</p>
+<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&nbsp;</p>
+
+<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;"><strong>11. </strong>If you lost your roll no. Please follow this method,</p>
+
+<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">NSTU&lt;space&gt;HELP&lt;space&gt;HSC BOARD(first three letters)&lt;space&gt;HSC ROLL&lt;space&gt;YEAR&lt;space&gt;UNIT</p>
+
+<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">send this sms to 16222 from teletalk number.</p>
+
+<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&nbsp;</p>
+
+<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Suppose Your board is Dhaka , Year -2013 and hsc roll - 100000 and your filled the form to admit in A unit.</p>
+
+<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">So you can write -</p>
+
+<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;"><strong>NSTU HELP DHK 100000 2013 A</strong></p>
+
+<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Send this to 16222 from teletalk number.</p>
 
 <p><strong>N.B.</strong><br />
 &nbsp;&nbsp;&nbsp; If any proof of adopting cheating by any applicant in the admission test is found, the authority will cancel his/her admission test.<br />
@@ -307,7 +323,7 @@ Total marks are 100. Pass marks are 40.<br />
 <br />
 &nbsp;&nbsp;&nbsp; Applicant can the seat plans for admission test, admission test results and other information through SMS or the website of the university or in the daily newspapers.<br />
 <br />
-&nbsp;&nbsp; There are the arrangement of scholarships for the merit and poor students.<br />
-<br />
-For admission purposes applicant can contact with the mobile number: <a class="telephone" href="tel:01765592654">01765592654</a> or <a class="email" href="mailto:info@nstu.edu.bd">info@nstu.edu.bd</a> or You can contact with the register office.</p>
+&nbsp;&nbsp; There are the arrangement of scholarships for the merit and poor students.</p>
+
+<p>For admission purposes applicant can contact with the mobile number: <a class="telephone" href="tel:01765592654">01765592654</a> or <a class="email" href="mailto:info@nstu.edu.bd">info@nstu.edu.bd</a> or You can contact with the register office.</p>
 </div>
