added expand menu in department

--- a/assets/ignoreit/introduction.html
+++ b/assets/ignoreit/introduction.html
@@ -43,9 +43,15 @@ p{font-size:15px}
 <strong>Academic program started from:</strong> 22nd June, 2006<br />
 <strong>Location:</strong> 8 Kilometer south from Noakhali Town, and at the west side of Sonapur-SubornoChar road.<br />
 <strong>Area:</strong> 101 Acres.<br />
-<strong>Faculty:</strong> 3<br />
-&nbsp;<br />
-<u><strong>Departments:</strong> </u><br />
+<strong>Faculty:</strong> 3</p>
+
+<ul>
+	<li>Faculty of Engineering &amp; Technology</li>
+	<li>Faculty of Life Science</li>
+	<li>Faculty of Business Administration&nbsp;</li>
+</ul>
+
+<p><u><strong>Departments:</strong> </u><br />
 01. Computer Science and Telecommunication Engineering (CSTE)<br />
 02. Fisheries and Marine Science (FIMS) (<a href="http://www.fims-nstu.org">www.fims-nstu.org</a>)<br />
 03. Pharmacy (<a href="http://www.nstupharma.org">www.nstupharma.org</a>)<br />
