--- a/assets/ignoreit/department.html
+++ b/assets/ignoreit/department.html
@@ -3,8 +3,31 @@
 box-shadow:         inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);}
 body{background-color:#f5f5f5; font-family:serif; line-height:1.3em; border:3px solid #29b6f6; 	border-radius: 6px; padding:3px; padding-top:8px }
 p{font-size:15px}
-.headertitle{width:100%; font-size: 17px; background:#29b6f6; color:#FFFFFF; border-radius: 3px; text-align: center}
-.maintitle{font-weight:bold;width:100%; font-size: 16px; background:#039be5; color:#FFFFFF; border-radius: 15px;padding-top:10px; padding-bottom:10px; text-align: center; margin-bottom:10px}
+.headertitle{ padding-top: 5px; padding-bottom: 5px; margin-bottom:2px;
+  background: #03a9f4;
+  background-image: -webkit-linear-gradient(top, #29b6f6, #0369a8);
+  background-image: -moz-linear-gradient(top, #29b6f6, #0369a8);
+  background-image: -ms-linear-gradient(top, #29b6f6, #0369a8);
+  background-image: -o-linear-gradient(top, #29b6f6, #0369a8);
+  background-image: linear-gradient(to bottom, #29b6f6, #0369a8);
+  border-radius: 3px;
+  color: #ffffff;
+  font-size: 15px;
+  padding: 7px 20px 7px 20px;
+  text-decoration: none;
+
+}
+
+ .headertitle:hover{ background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+  }
+
+.maintitle{font-weight:bold;width:100%; font-size: 16px; background:#039be5; color:#FFFFFF; border-radius: 10px;padding-top:10px; padding-bottom:10px; text-align: center; margin-bottom:3px}
 .telephone {
     background-image: url("http://i61.tinypic.com/n6xtmw.png");
     background-position: 0 0px;
@@ -29,11 +52,39 @@ p{font-size:15px}
     text-decoration: none;
 }
 .Email:hover{color:#29b6f6}
+.content {display:none;}
+.toggle.expander.expanded {
+padding-left: 27px;
+background-position: 13px;
+background-repeat: no-repeat;
+background-image: url(https://raw.githubusercontent.com/sylvain-hamel/simple-expand/master/demo/expanded.gif);
+}
+.toggle.expander.collapsed {
+padding-left: 27px;
+background-position: 13px;
+background-repeat: no-repeat;
+background-image: url(https://raw.githubusercontent.com/sylvain-hamel/simple-expand/master/demo/collapsed.gif);
+}
+#demo-nesting-sub1 {
+margin-left: 20px;
+}
+#demo-nesting-sub2 {
+margin-left: 40px;
+}
 </style>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/sylvain-hamel/simple-expand/master/src/simple-expand.min.js"></script>
+<script type="text/javascript">
+$(function () {
+$('.expander').simpleexpand();
+});
+</script>
+
 <div class="maintitle">Departments &amp; Teachers</div>
+<div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander toggle">Computer Science and Telecommunication Engineering (CSTE 01)</div></a>
 
-<div class="headertitle">Computer Science and Telecommunication Engineering (CSTE 01)</div>
-
+<div class="content">
 <p style="text-align: center;"><u><span style="font-size:14px;"><strong>Chairman &amp; Associate Professor</strong></span></u></p>
 
 <div class="infoclass"><strong>Dr. Mohammed Humayun Kabir</strong><br />
@@ -96,9 +147,13 @@ Email: <a class="email" href="mailto:rabby_cse_buet@yahoo.com">rabby_cse_buet@ya
 <div class="infoclass"><strong>Iftekhar Mahmud Towhid</strong><br />
 Phone: <a class="telephone" href="tel:01812597258">01812597258</a><br />
 Email: <a class="email" href="mailto:im_towhid@yahoo.com">im_towhid@yahoo.com</a></div>
+</div>
+</div>
 
-<div class="headertitle">Fisheries and Marine Science (FIMS 02)</div>
+<div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander2" class="headertitle expander toggle">Fisheries and Marine Science (FIMS 02)</div></a>
 
+<div class="content">
 <div class="infoclass"><strong>DR. MD. ABUL HOSSAIN</strong><br />
 Pro Vice Chancellor,<br />
 Dean, Faculty of Science &amp; Professor,<br />
@@ -180,9 +235,13 @@ Qualification: B.Sc (Hon&rsquo;s), M.Sc (Marine Sciences)<br />
 Mobile: <a class="telephone" href="tel:+8801712186434">+8801712-186434</a><br />
 Email: <a class="email" href="mailto:mustafa.nstu2013@gmail.com">mustafa.nstu2013@gmail.com</a><br />
 website: <a href="www.fims-nstu.org">www.fims-nstu.org</a></div>
+</div>
+</div>
 
-<div class="headertitle">Pharmacy (03)</div>
+<div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander3" class="headertitle expander toggle">Pharmacy (03)</div></a>
 
+<div class="content">
 <p style="text-align: center;"><u><strong>Chairman &amp; Associate Professor</strong></u></p>
 
 <div class="infoclass"><strong>Dr. Mohammad Salim Hossain</strong><br />
@@ -268,8 +327,13 @@ website: <a href="www.nstupharma.org">www.nstupharma.org</a></div>
 website: <a href="www.nstupharma.org">www.nstupharma.org</a></div>
 </div>
 
-<div class="headertitle">Applied Chemistry &amp; Chemical Engineering (ACCE 04)</div>
+</div>
+</div>
 
+<div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander4" class="headertitle expander toggle">Applied Chemistry &amp; Chemical Engineering (ACCE 04)</div></a>
+
+<div class="content">
 <p style="text-align: center;"><u><strong>Chairman &amp; Associate Professor</strong></u></p>
 
 <div class="infoclass"><strong>Dr. Newaz Mohammed Bahadur</strong><br />
@@ -342,9 +406,13 @@ Email: <a class="email" href="mailto:shafiul_acct@yahoo.com">shafiul_acct@yahoo.
 <div class="infoclass"><strong>Mohammed Shahidul Islam</strong><br />
 Phone: <a class="telephone" href="tel:01710510106">01710510106</a><br />
 Email: <a class="email" href="mailto:shahid_acct@yahoo.com">shahid_acct@yahoo.com</a></div>
+</div>
+</div>
 
-<div class="headertitle">MicroBiology (MBG 05)</div>
+<div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander5" class="headertitle expander toggle">MicroBiology (MBG 05)</div></a>
 
+<div class="content">
 <p style="text-align: center;"><u><strong>Chairman &amp; Assistant Professor</strong></u></p>
 
 <div class="infoclass"><strong>Mohammad Ruhul Amin</strong><br />
@@ -387,9 +455,13 @@ Phone: <a class="telephone" href="tel:01725706169">01725706169</a></div>
 
 <div class="infoclass"><strong>Abanti Barua</strong><br />
 Phone: <a class="telephone" href="tel:01726036487">01726036487</a></div>
+</div>
+</div>
 
-<div class="headertitle">Applied Mathematics(AM 06)</div>
+<div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander6" class="headertitle expander toggle">Applied Mathematics(AM 06)</div></a>
 
+<div class="content">
 <p style="text-align: center;"><u><strong>Chairman</strong></u></p>
 
 <div class="infoclass"><strong>Mohammed Nizam Uddin</strong><br />
@@ -425,9 +497,13 @@ Email: <a class="email" href="mailto:z_math_du@yahoo.com">z_math_du@yahoo.com</a
 
 <div class="infoclass"><strong>Mohammad Raquibul Hossain</strong><br />
 phone: <a class="telephone" href="tel:01840607032">01840607032</a> , <a class="telephone" href="tel:01912098449">01912098449</a></div>
+</div>
+</div>
 
-<div class="headertitle">English (07)</div>
+<div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander7" class="headertitle expander toggle">English (07)</div></a>
 
+<div class="content">
 <p style="text-align: center;"><u><strong>Chairman &amp; Assistant professor</strong></u></p>
 
 <div class="infoclass"><strong>Afsana Mousume</strong><br />
@@ -455,9 +531,13 @@ Phone: <a class="telephone" href="tel:01815865760">01815865760</a></div>
 
 <div class="infoclass"><strong>Md. Ehsanul Hoque</strong><br />
 Phone: <a class="telephone" href="tel:01813171087">01813171087</a></div>
+</div>
+</div>
 
-<div class="headertitle">Food Technology and Nutrition Science(FTNS 08)</div>
+<div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander8" class="headertitle expander toggle">Food Technology and Nutrition Science(FTNS 08)</div></a>
 
+<div class="content">
 <p style="text-align: center;"><u><strong>&nbsp;Chairman &amp; Assistant Professor</strong></u></p>
 
 <div class="infoclass"><strong>Tazul islam</strong><br />
@@ -471,9 +551,13 @@ Phone: <a class="telephone" href="tel:01723572515">01723572515</a></div>
 
 <div class="infoclass"><strong>Tanzina Rahman</strong><br />
 Phone: <a class="telephone" href="tel:01687304530">01687304530</a></div>
+</div>
+</div>
 
-<div class="headertitle">Environmental Science and Hazard Studies(ESHS 09)</div>
+<div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander9" class="headertitle expander toggle">Environmental Science and Hazard Studies(ESHS 09)</div></a>
 
+<div class="content">
 <p style="text-align: center;"><u><strong>Chairman &amp; Assistant Professor</strong></u></p>
 
 <div class="infoclass"><strong>Mohammad Mohinuzzaman Moyeen</strong><br />
@@ -493,9 +577,13 @@ Phone: <a class="telephone" href="tel:01717153711">01717153711</a></div>
 
 <div class="infoclass"><strong>Nadia Noor</strong><br />
 Phone: <a class="telephone" href="tel:01717955310">01717955310</a></div>
+</div>
+</div>
 
-<div class="headertitle">Business Administration(BBA 10)</div>
+<div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander10" class="headertitle expander toggle">Business Administration(BBA 10)</div></a>
 
+<div class="content">
 <p style="text-align: center;"><u><strong>Chairman &amp; Assistant Professor</strong></u></p>
 
 <div class="infoclass"><strong>Masum Miah</strong><br />
@@ -513,9 +601,14 @@ Phone: <a class="telephone" href="tel:01711063417">01711063417</a></div>
 
 <div class="infoclass"><strong>Shafiqul Alam</strong><br />
 Phone: <a class="telephone" href="tel:01673642243">01673642243</a></div>
+</div>
+</div>
 
-<div class="headertitle">Information and Communication Technology(ICT 11)</div>
 
+<div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander toggle">Information and Communication Technology(ICT 11)</div></a>
+
+<div class="content">
 <p style="text-align: center;"><u><strong>&nbsp;Chairman &amp; Associate Professor</strong></u></p>
 
 <div class="infoclass"><strong>Dr. Md. Ashikur Rahaman Khan</strong><br />
@@ -535,9 +628,13 @@ Email: <a class="email" href="mailto:salehin.fahad@yahoo.com">salehin.fahad@yaho
 <div class="infoclass"><strong>Md. Saifur rahaman Saif</strong><br />
 Phone: <a class="telephone" href="tel:01722514322">01722514322</a><br />
 Email: <a class="email" href="mailto:iamsaif07@gmail.com">iamsaif07@gmail.com</a></div>
+</div>
+</div>
 
-<div class="headertitle">Biotechnology and Genetic Engineering(BGE 12)</div>
+<div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander toggle">Biotechnology and Genetic Engineering(BGE 12)</div></a>
 
+<div class="content">
 <p style="text-align: center;"><u><strong>Chairman (Acting) &amp; Lecturer</strong></u></p>
 
 <div class="infoclass"><strong>Khadizatul Kubra</strong><br />
@@ -555,9 +652,13 @@ Phone: <a class="telephone" href="tel:01716169825">01716169825</a></div>
 
 <div class="infoclass"><strong>Abu Nasar Mondal</strong> (Study Leave)<br />
 Phone: <a class="telephone" href="tel:01723336562">01723336562</a></div>
+</div>
+</div>
 
-<div class="headertitle">Economics and Poverty Studies(EPS 13)</div>
+<div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander toggle">Economics and Poverty Studies(EPS 13)</div></a>
 
+<div class="content">
 <p style="text-align: center;"><u><strong>Chairman (Acting) &amp; Lecturer</strong></u></p>
 
 <div class="infoclass"><strong>Md. Khosrul Alam</strong><br />
@@ -579,9 +680,13 @@ Phone: <a class="telephone" href="tel:01969429120">01969429120</a></div>
 
 <div class="infoclass"><strong>Tania Islam</strong><br />
 Phone: <a class="telephone" href="tel:01756524309">01756524309</a></div>
+</div>
+</div>
 
-<div class="headertitle">Coastal Agriculture(CA 14)</div>
+<div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander toggle">Coastal Agriculture(CA 14)</div></a>
 
+<div class="content">
 <p style="text-align: center;"><u><strong>Chairman (Acting) &amp; Lecturer</strong></u></p>
 
 <div class="infoclass"><strong>Mehede Hassan Rubel</strong><br />
